# fund-arbitrage-monitor

./: .gitignore  CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md  WINDOWS_GUIDE.md  build.py  demo.py  findings.md  progress.md  pyproject.toml  requirements.txt  run.sh  run_app_briefly.py  start_app.bat  task_plan.md  test_app.py  test_final_app.py  test_models.py  test_simple.py  test_thread_safety.py
.github/workflows/: ci.yml
docs/api/: api_documentation.md
docs/dev/: developer_guide.md
docs/plans/: 2026-01-30-fund-arbitrage-monitor-design.md
docs/user/: user_manual.md
scripts/: analyze_realtime_performance.py  check_cache.py  check_nav.py  debug_161226.py  optimization_plan.md  performance_test.py  test_real_api.py
src/: __init__.py  main.py
src/controllers/: data_controller.py  main_controller.py  signal_manager.py
src/data_sources/: __init__.py  eastmoney_api.py  sina_api.py  strategy.py
src/models/: arbitrage_calculator.py  data_cleaner.py  data_fetcher.py  database.py  fund_manager.py
src/ui/: chart_widget.py  dashboard_widget.py  filters_widget.py  fund_list_widget.py  main_window.py  styles.py  theme_manager.py
src/utils/: __init__.py  cache.py  config.py  data_exporter.py  error_handler.py  network.py
tests/: conftest.py  factories.py  mock_fetcher.py
tests/integration/: test_database_calculator_integration.py  test_fetcher_database_integration.py
tests/performance/: test_performance.py
tests/ui/: test_main_window.py
tests/unit/: test_arbitrage_calculator.py  test_data_controller.py  test_data_exporter.py  test_data_fetcher.py  test_database.py  test_eastmoney_api.py  test_eastmoney_data_fetcher.py  test_fund_manager.py  test_main_controller.py  test_signal_manager.py  test_theme_manager.py
